[project]
name = "ollama-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anyio>=4.6.2",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "fastcore>=1.7.19",
    "fastlite>=0.0.13",
    "httpx>=0.27.2",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "python-fasthtml>=0.8.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0"
]
